--- a/src/app/components/articles/spells/spells.component.html
+++ b/src/app/components/articles/spells/spells.component.html
@@ -1,5 +1,5 @@
 <div class="main" #listArticle>
-    <article *ngIf="articles; else loading" class="container">
+    <article class="container">
         <h1 class="text-center mb-3">
             Spells
             <span 
@@ -42,5 +42,4 @@
         </div>
 
     </article>
-    <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
