--- a/src/app/components/articles/location-article-map-create/location-article-map-create.component.html
+++ b/src/app/components/articles/location-article-map-create/location-article-map-create.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <article class="mb-5" *ngIf="markerModel && locationModel; else loading">
+    <article class="mb-5">
         <app-edit-toggle 
         [isInUpdateState]=true 
         [link]="mapUrl"
@@ -25,7 +25,5 @@
             <div class="btn btn-dark mr-3" (click)="onCancel()">Cancel</div>
             <button type="submit" class="btn btn-secondary">Submit</button>
         </form>
-
     </article>
-    <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
