Fixed character connections being shown on an encounter that hasn't been created yet, leading to buggy behaviour

--- a/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
+++ b/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
@@ -68,9 +68,9 @@ class="container"
             ></app-compare-form-container>
         
             <!-- Encounter Connections -->
-            <hr class="white-line mt-4" *ngIf="!diaryEntryView">
+            <hr class="white-line mt-4" *ngIf="!diaryEntryView && !isInCreateState()">
 
-            <div class="encounter-connections d-flex align-items-center" *ngIf="!diaryEntryView">
+            <div class="encounter-connections d-flex align-items-center" *ngIf="!diaryEntryView && !isInCreateState()">
         
                 <span class="mr-4 tag-label"> Characters: </span>
                 <div class="d-inline-flex align-items-center flex-wrap">
