Moved Vime to use stencil components in order to be able to upgrade angular to 12

--- a/src/app/components/articles/session-audio/session-audio.component.html
+++ b/src/app/components/articles/session-audio/session-audio.component.html
@@ -27,7 +27,7 @@
             <!-- Vime-Player -->
             <vm-player
                 theme="dark"
-                style="--vm-player-theme: #e86c8b;"
+                style="--vm-player-theme: var(--primary);"
                 class="w-100"
                 #vimePlayer
             >
