--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 //Fonts
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
 input[type="submit"], button {
@@ -54,7 +56,7 @@ $marker-width: 100px;
 	opacity: 0.66;
 	padding: 0 3px;
 	width: $marker-width;
-	margin-left: -1*$marker-width/2;
+	margin-left: math.div(-1*$marker-width, 2);
 	margin-top: 5px;
 	text-align: center;
 }
