Replaced "bold" css class with "strong" html element

--- a/src/app/components/articles/quest-overview/quest-overview.component.html
+++ b/src/app/components/articles/quest-overview/quest-overview.component.html
@@ -62,7 +62,7 @@
                             id="quest{{ quest.pk }}" 
                             routerLink="{{ quest.getAbsoluteRouterUrl() }}"
                             >
-                                 <span class="bold">{{ quest.name }}</span>
+                                 <strong>{{ quest.name }}</strong>
                             </a>
                         </td>
                         <!-- Quest Abstract -->
