--- a/src/app/components/articles/marker/marker.component.html
+++ b/src/app/components/articles/marker/marker.component.html
@@ -13,28 +13,28 @@
         <!-- Longitude -->
         <div class="row">
             <div class="col-md-4 col-0"></div>
-            <span class="bold col-3">Longitude: </span> 
+            <strong class="col-3">Longitude: </strong> 
             <span class="col-md-5 col-9">{{articleData.longitude}}</span>
         </div>
 
         <!-- Latitude -->
         <div class="row">
             <div class="col-md-4 col-0"></div>
-            <span class="bold col-3">Latitude: </span> 
+            <strong class="col-3">Latitude: </strong> 
             <span class="col-md-5 col-9">{{articleData.latitude}}</span>
         </div>
 
         <!-- Marker Type -->
         <div class="row">
             <div class="col-md-4 col-0"></div>
-            <span class="bold col-3">Marker type: </span> 
+            <strong class="col-3">Marker type: </strong> 
             <span class="col-md-5 col-9">{{articleData.type_details.name}}</span>
         </div>
 
         <!-- Icon -->
         <div class="row">
             <div class="col-md-4 col-0"></div>
-            <span class="bold col-3">Icon: </span>
+            <strong class="col-3">Icon: </strong>
 
             <span class="col-md-5 col-9"> 
                 <span *ngIf="articleData.icon">{{articleData.icon}}</span> 
@@ -49,7 +49,7 @@
         <!-- Color -->
         <div class="row">
             <div class="col-md-4 col-0"></div>
-            <span class="bold col-3">Color: </span> 
+            <strong class="col-3">Color: </strong> 
 
             <span class="col-md-5 col-9"> 
                 <span *ngIf="articleData.color">{{articleData.color}}</span> 
