Replaced image gallery with an image carousel
This way a lot of the complexity is now handled by ngb bootstrap, which I'm fully using anyway.

--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -53,6 +53,12 @@
         [images]="this.articleData.images"
         ></app-image-gallery>
 
+        <app-image-carousel
+        [article_type]="'character'"
+        [article_pk]="this.articleData.pk"
+        [images]="this.articleData.images"
+        ></app-image-carousel>
+
         <!-- Quote -->
         <div class="mb-3">
             <app-quote-gallery [character]="articleData" [campaign]="campaign"></app-quote-gallery>
