Swapped out image gallery for image carousel in all places where being used

--- a/src/app/components/articles/creature-article/creature-article.component.html
+++ b/src/app/components/articles/creature-article/creature-article.component.html
@@ -15,11 +15,11 @@
         </div>
 
         <!-- Image Gallery -->
-        <app-image-gallery
+        <app-image-carousel
         [article_type]="'creature'"
         [article_pk]="this.articleData.pk"
         [images]="this.articleData.images"
-        ></app-image-gallery>
+        ></app-image-carousel>
 
         <!-- Description -->
         <div class="mb-5">
