--- a/src/app/components/articles/item-article/item-article.component.html
+++ b/src/app/components/articles/item-article/item-article.component.html
@@ -24,11 +24,11 @@
 
 
         <!-- Image Gallery -->
-        <app-image-gallery
+        <app-image-carousel
         [article_type]="'item'"
         [article_pk]="this.articleData.pk"
         [images]="this.articleData.images"
-        ></app-image-gallery>
+        ></app-image-carousel>
 
         <!-- Description -->
         <div class="mb-5">
