--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -44,11 +44,11 @@
 
 
         <!-- Image Gallery -->
-        <app-image-gallery
+        <app-image-carousel
         [article_type]="'location'"
         [article_pk]="this.articleData.pk"
         [images]="this.articleData.images"
-        ></app-image-gallery>
+        ></app-image-carousel>
 
         <!-- Description -->
         <div class="mb-5">
