--- a/src/app/components/articles/organization-article/organization-article.component.html
+++ b/src/app/components/articles/organization-article/organization-article.component.html
@@ -43,11 +43,11 @@
 
 
         <!-- Image Gallery -->
-        <app-image-gallery  
+        <app-image-carousel  
         [article_type]="'organization'"   
         [article_pk]="this.articleData.pk"
         [images]="this.articleData.images"
-        ></app-image-gallery>
+        ></app-image-carousel>
 
         <!-- Description -->
         <div class="mb-5">
