Removed unnecessary logging and custom coloration

--- a/src/app/components/utility/image-carousel/image-carousel.component.scss
+++ b/src/app/components/utility/image-carousel/image-carousel.component.scss
@@ -9,7 +9,7 @@
 }
 
 .image-caption{
-    background: rgba(0,0,0,0.7);
+    background: var(--wiki-background-1);
     width: 50%;
     text-align: center;
     position: absolute;
