--- a/src/styles.scss
+++ b/src/styles.scss
@@ -559,7 +559,7 @@ a.carousel-control-next:hover{
 }
 
 .carousel-indicators{
-	background: rgba(27, 31, 34, 0.85);
+	background: var(--wiki-background-1);
 	width: 40%;
 	margin-left: 30%;
 	margin-right: 30%;
