Fixed swipe on chromium browsers not registering

--- a/src/app/components/utility/sidebar/sidebar.component.html
+++ b/src/app/components/utility/sidebar/sidebar.component.html
@@ -1,4 +1,6 @@
 <nav id="sidebar"
+(swipeleft)="true"
+(swiperight)="true"
 [ngClass]="{'swiped-right': showSidebar.getValue(), 'swiped-left': !showSidebar.getValue()}"
 >
     <!-- Brand -->
