Fixed user row being erroneously shown before data has loaded

--- a/src/app/components/utility/user-row/user-row.component.html
+++ b/src/app/components/utility/user-row/user-row.component.html
@@ -1,4 +1,4 @@
-<div class="py-2 row">
+<div class="py-2 row" *ngIf="user && groups">
     <!-- Username Column -->
     <div class="col-md-3 col-4 p-0 d-flex align-items-center">
         <span class="ml-3">
