--- a/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
+++ b/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
@@ -20,20 +20,19 @@
                     </div>
 
                     <!-- Card Body -->
-                    <!-- TODO: Fix the download button somehow 
-                        Gained Intel so far:
-                        - You ideally want to NOT handle this in angular. Angular can deal with ~10Mb files, not 50+. So download from file-url or a django view
-                        - If you download from django-view, it needs to without login and somehow still authentication
-                            Problem here: Getting this done with a url that isn't snatched by the angular router
-                        - If you download from file-url, you would use the download attribute on an anchor tag
-                            So far that just isn't working
-                    
-                    -->
                     <div class="card-body d-flex justify-content-center flex-column">
-                        <a routerLink="{{ sessionAudioURLs[audioIndex]}}"
-                            class="text-center btn btn-primary"> 
-                            <span class="fa fa-desktop"></span>
+                        <a routerLink="{{ sessionAudioURLs[audioIndex]}}" class="text-center btn btn-primary mb-2"> 
+                            <span class="fas fa-desktop"></span>
                             <strong> Stream </strong>
+                        </a>
+
+                        <a 
+                        href="{{ constants.wikiUrl }}{{ sessionAudioFiles[audioIndex].download_url }}"
+                        target="_blank"
+                        class="text-center btn btn-primary"
+                        > 
+                            <span class="fas fa-download"></span>
+                            <strong> Download </strong>
                         </a>
                     </div>
                 </div>
