Made stream the primary action over download

--- a/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
+++ b/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
@@ -29,7 +29,7 @@
                         <a 
                         href="{{ constants.wikiUrl }}{{ sessionAudioFiles[audioIndex].download_url }}"
                         target="_blank"
-                        class="text-center btn btn-primary"
+                        class="text-center btn btn-dark"
                         > 
                             <span class="fas fa-download"></span>
                             <strong> Download </strong>
