Turned login button to be primary

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
         <form (submit)="onSubmit()" class="d-flex flex-column">
             <formly-form [model]="model" [fields]="fields" [form]="form"></formly-form>
             <div><span class="pointer pseudo-link" (click)="togglePasswordResetView()"> Forgot your password?</span></div>
-            <button type="submit" class="btn btn-secondary mt-4">Login</button>
+            <button type="submit" class="btn btn-primary mt-4">Login</button>
         </form>
     </article>
 </div>
