--- a/src/app/components/articles/article-overview/article-overview.component.html
+++ b/src/app/components/articles/article-overview/article-overview.component.html
@@ -2,35 +2,13 @@
     <article class="pr-4 pl-4 container">
         <!-- Heading -->
         <div class="row" *ngIf="overviewTypeName">
-            <h1 class="major col mb-4 pb-1 border-bottom">{{ overviewTypeMetaData[overviewTypeName].heading }}</h1>
+            <h1 class="major col mb-4 pb-1 border-bottom">{{ overviewTypeMetaData[overviewTypeName]?.heading }}</h1>
         </div>
 
-        <!-- Image -->
-        <div class="row" *ngIf="overviewTypeName!==characterOverview">
-            <img class="col overview-image px-0 mb-4" src="{{overviewTypeMetaData[overviewTypeName].image}}" alt="Image indicating the overview type"/>
-        </div>
-
-        <!-- Character OverView Snippet | PC List-->
-        <div *ngIf="overviewTypeName===characterOverview" id="player-characters">
-            <!-- PC List Heaidng -->
-            <div class="row">
-                <h3 class="col mb-0"> Player Characters </h3>
-            </div>
-
-            <!-- PC List -->
-            <div class="mb-5 row">
-                <div *ngFor="let playerCharacter of playerCharacters" class="mb-4 col-md-4 col-sm-6 col-12">
-                    <a routerLink="{{ playerCharacter.getAbsoluteRouterUrl() }}">
-                        <div class="card">
-                            <img *ngIf="playerCharacter.images" class="card-img-top" [src]="constants.wikiUrl + playerCharacter.images[0]" alt="An image displaying a player character">
-                            <div class="card-body p-3">
-                                <h5 class="card-title mb-0 text-center">{{ playerCharacter.name_full }}</h5>
-                            </div>
-                        </div>
-                    </a> 
-                </div>
-            </div>
-        </div>
+        <ng-container [ngSwitch]="overviewTypeName" #heading>
+            <ng-container *ngSwitchCase="OverviewType.Character" [ngTemplateOutlet]="characterHeading"></ng-container>
+            <ng-container *ngSwitchDefault [ngTemplateOutlet]="defaultHeading"></ng-container>        
+        </ng-container>
 
         <!-- Adding Item button -->
         <div class="mb-3 row" *ngIf="hasCreatePermission">
@@ -40,7 +18,6 @@
             </a>
         </div>
 
-        <!-- Filter Bar -->
         <form autocomplete="off" class="row" (submit)="openFirstArticle(filter.value)">
             <input
             type="text"
@@ -52,87 +29,11 @@
             >    
         </form>
 
-        <!-- Character Overview Snippet | NPC List -->
-        <div *ngIf="overviewTypeName===characterOverview">
-            <!-- NPC List Heading -->
-            <div class="row">
-                <h3 class="mb-3 col"> Non-Player Characters </h3>
-            </div>
-
-            <!-- NPC List -->
-            <div class="row">
-                <div 
-                *ngFor="let characterLetterEntries of listItems | groupByFirstLetter: 'name'" 
-                [ngClass]="{'py-4 col-md-6 border-bottom': !filter.value, 'col-12': filter.value}"
-                >
-                    <!-- Single-Letter-Group-Heading -->
-                    <h5 class="mb-0" [ngClass]="{'d-none': filter.value}"> {{ characterLetterEntries.key }} </h5>
-
-                    <!-- Single-Letter-Group-Names -->
-                    <ul class="mb-0">
-                        <span *ngFor="let characterEntry of characterLetterEntries.value" class="px-0">
-                            <li 
-                            [ngClass]="{'d-none': !characterEntry.name_full.toLowerCase().includes(filter.value.toLowerCase())}"
-                            >
-                                <a routerLink="{{ characterEntry.getAbsoluteRouterUrl() }}"> 
-                                    {{characterEntry.name_full}}
-                                </a>
-                            </li>
-                        </span>
-                    </ul>
-
-                </div>
-            </div>
-
-        </div>
-
-        <!-- DiaryEntry Overview -->
-        <div *ngIf="overviewTypeName===diaryentryOverview">
-            <div *ngFor="let authorDiaryEntries of listItems | groupBy: 'author_details.name'">
-                <!-- Author Heading -->
-                <div class="row">
-                    <h5 class="col" [ngClass]="{'d-none': filter.value}"> {{ authorDiaryEntries.key }} </h5>
-                </div>
-
-                <!-- Author Entries -->
-                <ul [ngClass]="{'mb-0': filter.value}">
-                    <span class="row" *ngFor="let diaryEntry of authorDiaryEntries.value">
-                        <li 
-                        class="col"
-                        [ngClass]="{'d-none': !diaryEntry.name_full.toLowerCase().includes(filter.value.toLowerCase())}"
-                        >
-                            <a routerLink="{{ diaryEntry.getAbsoluteRouterUrl()}}" >
-                                {{diaryEntry.name_full}}
-                            </a>
-                        </li>
-                    </span>
-                </ul>
-            </div>
-        </div>
-        
-        <!-- Item/Creature/Organization/Location Overview -->
-        <div class="row" *ngIf="overviewTypeName===itemOverview || overviewTypeName===creatureOverview || overviewTypeName===organizationOverview || overviewTypeName===locationOverview">
-            <div 
-            *ngFor="let itemLetterEntries of listItems | groupByFirstLetter: 'name_full'"
-            [ngClass]="{'py-4 col-md-6 border-bottom': !filter.value, 'col-12': filter.value}"
-            >
-                <!-- Letter Heading -->
-                 <h5 class="mb-0" [ngClass]="{'d-none': filter.value}"> {{ itemLetterEntries.key }} </h5>
-
-                <!-- Article List -->
-                <ul class="mb-0">
-                    <li 
-                    *ngFor="let item of itemLetterEntries.value"
-                    [ngClass]="{'d-none': !item.name_full.toLowerCase().includes(filter.value.toLowerCase())}"
-                    >
-                        <a routerLink="{{ item.getAbsoluteRouterUrl() }}">
-                            {{item.name_full}}
-                        </a>
-                    </li>
-                </ul>
-
-            </div>
-        </div>
+        <ng-container [ngSwitch]="overviewTypeName" #body> 
+            <ng-container *ngSwitchCase="OverviewType.Character" [ngTemplateOutlet]="characterBody"></ng-container>
+            <ng-container *ngSwitchCase="OverviewType.Diaryentry" [ngTemplateOutlet]="diaryentryBody"></ng-container>
+            <ng-container *ngSwitchDefault [ngTemplateOutlet]="defaultBody"></ng-container>        
+        </ng-container>
 
         <div class="row">
             <a routerLink="{{homeUrl}}" class="mt-4 col-sm-3 btn btn-secondary">
@@ -141,3 +42,125 @@
         </div>
     </article>
 </div>
+
+
+<ng-template #defaultHeading>
+    <!-- Image -->
+    <div class="row">
+        <img class="col overview-image px-0 mb-4" src="{{overviewTypeMetaData[overviewTypeName].image}}" alt="Image indicating the overview type"/>
+    </div>
+</ng-template>
+
+
+<ng-template #characterHeading>
+    <div class="row">
+        <h3 class="col mb-0"> Player Characters </h3>
+    </div>
+
+    <div class="mb-5 row">
+        <div *ngFor="let playerCharacter of playerCharacters" class="mb-4 col-md-4 col-sm-6 col-12">
+            <a routerLink="{{ playerCharacter.getAbsoluteRouterUrl() }}">
+                <div class="card">
+                    <img *ngIf="playerCharacter.images" class="card-img-top" [src]="constants.wikiUrl + playerCharacter.images[0]" alt="An image displaying a player character">
+                    <div class="card-body p-3">
+                        <h5 class="card-title mb-0 text-center">{{ playerCharacter.name_full }}</h5>
+                    </div>
+                </div>
+            </a> 
+        </div>
+    </div>
+</ng-template>
+
+
+<ng-template #characterBody>
+    <ng-container [ngTemplateOutlet]="filterField"></ng-container>
+
+    <div class="row">
+        <h3 class="mb-3 col"> Non-Player Characters </h3>
+    </div>
+
+    <div class="row">
+        <div 
+        *ngFor="let characterLetterEntries of listItems | groupByFirstLetter: 'name'" 
+        [ngClass]="{'py-4 col-md-6 border-bottom': !filter.value, 'col-12': filter.value}"
+        >
+            <!-- Single-Letter-Group-Heading -->
+            <h5 class="mb-0" [ngClass]="{'d-none': filter.value}"> {{ characterLetterEntries.key }} </h5>
+
+            <!-- Single-Letter-Group-Names -->
+            <ul class="mb-0">
+                <span *ngFor="let characterEntry of characterLetterEntries.value" class="px-0">
+                    <li 
+                    [ngClass]="{'d-none': !characterEntry.name_full.toLowerCase().includes(filter.value.toLowerCase())}"
+                    >
+                        <a routerLink="{{ characterEntry.getAbsoluteRouterUrl() }}"> 
+                            {{characterEntry.name_full}}
+                        </a>
+                    </li>
+                </span>
+            </ul>
+
+        </div>
+    </div>
+</ng-template>
+
+
+<ng-template #diaryentryBody>
+    <ng-container [ngTemplateOutlet]="filterField"></ng-container>
+
+    <div *ngFor="let authorDiaryEntries of listItems | groupBy: 'author_details.name'">
+        <!-- Author Heading -->
+        <div class="row">
+            <h5 class="col" [ngClass]="{'d-none': filter.value}"> {{ authorDiaryEntries.key }} </h5>
+        </div>
+
+        <!-- Author Entries -->
+        <ul [ngClass]="{'mb-0': filter.value}">
+            <span class="row" *ngFor="let diaryEntry of authorDiaryEntries.value">
+                <li 
+                class="col"
+                [ngClass]="{'d-none': !diaryEntry.name_full.toLowerCase().includes(filter.value.toLowerCase())}"
+                >
+                    <a routerLink="{{ diaryEntry.getAbsoluteRouterUrl()}}" >
+                        {{diaryEntry.name_full}}
+                    </a>
+                </li>
+            </span>
+        </ul>
+    </div>
+</ng-template>
+
+
+<ng-template #defaultBody>
+    <ng-container [ngTemplateOutlet]="filterField"></ng-container>
+
+    <div class="row">
+        <div 
+        *ngFor="let itemLetterEntries of listItems | groupByFirstLetter: 'name_full'"
+        [ngClass]="{'py-4 col-md-6 border-bottom': !filter.value, 'col-12': filter.value}"
+        >
+            <!-- Letter Heading -->
+             <h5 class="mb-0" [ngClass]="{'d-none': filter.value}"> {{ itemLetterEntries.key }} </h5>
+    
+            <!-- Article List -->
+            <ul class="mb-0">
+                <li 
+                *ngFor="let item of itemLetterEntries.value"
+                [ngClass]="{'d-none': !item.name_full.toLowerCase().includes(filter.value.toLowerCase())}"
+                >
+                    <a routerLink="{{ item.getAbsoluteRouterUrl() }}">
+                        {{item.name_full}}
+                    </a>
+                </li>
+            </ul>
+    
+        </div>
+    </div>
+
+</ng-template>
+
+
+
+<ng-template #filterField>
+
+</ng-template>
