Removed unnecessary padding

--- a/src/app/components/articles/article-overview/article-overview.component.html
+++ b/src/app/components/articles/article-overview/article-overview.component.html
@@ -1,5 +1,5 @@
 <div class="main" #overviewMainCard>
-    <article class="pr-4 pl-4 container">
+    <article class="container">
         <!-- Heading -->
         <div class="row" *ngIf="overviewTypeName">
             <h1 class="major col mb-4 pb-1 border-bottom">{{ overviewTypeMetaData[overviewTypeName]?.heading }}</h1>
