changed overview image css

--- a/src/app/components/articles/article-overview/article-overview.component.scss
+++ b/src/app/components/articles/article-overview/article-overview.component.scss
@@ -3,8 +3,9 @@ ul{
 }
 
 .overview-image{
-    max-height: 20rem;
+    max-height: 23rem;
     object-fit: cover;
+    object-position: bottom;
 }
 
 .filter-bar{
